--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ keywords = ["python", "package", "build", "tutorial"]
 requires-python = ">=3.7" 
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Intended Audience :: General",
+    "Intended Audience :: Education",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
 ]
