--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "randomsnake"
+name = "snakecharmers"
 description = "A tiny, non-serious package"
 version = "0.1.1"
 authors = [
