--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,9 @@ jobs:
       - name: Turn on 'editable' mode
         run: |
           pipenv install -e .
+      - name: Set DISPLAY environment variable
+        run: |
+          export DISPLAY=:0
       - name: Test with pytest
         run: |
           pipenv install pytest
