--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,9 +16,14 @@ jobs:
       - name: Turn on 'editable' mode
         run: |
           pipenv install -e .
-      - name: Set DISPLAY environment variable
+      - name: Install dependencies
         run: |
-          export DISPLAY=:0
+          sudo apt-get update
+          sudo apt-get install -y python3-tk xvfb
+      - name: Start Xvfb
+        run: |
+          Xvfb :99 -screen 0 1024x768x16 &
+          echo "DISPLAY=:99" >> $GITHUB_ENV
       - name: Test with pytest
         run: |
           pipenv install pytest
